<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >

    <include layout="@layout/simple_act_title_lay"/>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="#f0f0f0"
        android:paddingBottom="20dp"
        android:paddingTop="10dp"
        >
        <TableRow android:layout_width="match_parent"
        	android:layout_height="wrap_content">
        	
            <TextView android:layout_width="0dp"
	            android:layout_height="65dp"
		        android:text="@string/simple_safe_lock"
		        android:gravity="center_vertical"
		        android:textColor="@color/black_87"
		        android:layout_weight="1"
		        android:textSize="18sp"
		        />
            
            <TextView android:layout_width="wrap_content"
		        android:layout_height="60dp"
		        android:id="@+id/txt_safe_lock"
		        android:text="@string/simple_unlock"
		        android:gravity="center_vertical"
		        android:textColor="@color/black_87"
		        android:drawableEnd="@drawable/simple_icon_unlock"
		        android:drawablePadding="20dp"
		        android:paddingEnd="12dp"
		        android:onClick="onClick"
		        />
        </TableRow>
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
	        android:text="@string/simple_safe_lock_hint"
	        android:gravity="center_vertical"
	        android:textColor="@color/black_54"
	        />
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
	    <TextView android:layout_width="match_parent"
	        android:layout_height="65dp"
	        android:id="@+id/txt_sys_settings"
	        android:text="@string/simple_sys_settings"
	        android:gravity="center_vertical"
	        android:textColor="@color/black_87"
	        android:drawableEnd="@drawable/simple_right_arrow_selector"
	        android:paddingLeft="20dp"
	        android:textSize="18sp"
	        android:paddingRight="20dp"
	        android:onClick="onClick"
	        android:background="@drawable/simple_list_item_selector"
	        />
	    <View android:layout_width="match_parent"
	        android:layout_height="1dp"
	        android:background="@color/divider_line_color"/>
    </LinearLayout>
    
    
      <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/lay_speak_manager"
        >
	    <TextView android:layout_width="match_parent"
	        android:layout_height="65dp"
	        android:id="@+id/txt_speak_manager"
	        android:text="@string/simple_speak_manager"
	        android:gravity="center_vertical"
	        android:textColor="@color/black_87"
	        android:paddingLeft="20dp"
	        android:textSize="18sp"
	        android:onClick="onClick"
	        android:background="@drawable/simple_list_item_selector"
	        />
	    <View android:layout_width="match_parent"
	        android:layout_height="1dp"
	        android:background="@color/divider_line_color"/>
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/lay_desk_manager"
        >
	    <TextView android:layout_width="match_parent"
	        android:layout_height="65dp"
	        android:id="@+id/txt_desk_manager"
	        android:text="@string/simple_desk_manager"
	        android:gravity="center_vertical"
	        android:textColor="@color/black_87"
	        android:paddingLeft="20dp"
	        android:textSize="18sp"
	        android:onClick="onClick"
	        android:background="@drawable/simple_list_item_selector"
	        />
	    <View android:layout_width="match_parent"
	        android:layout_height="1dp"
	        android:background="@color/divider_line_color"/>
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
	     <TextView android:layout_width="match_parent"
	        android:layout_height="65dp"
	        android:id="@+id/txt_exit_desk"
	        android:text="@string/simple_exit_desk"
	        android:gravity="center_vertical"
	        android:textColor="@color/black_87"
	        android:paddingLeft="20dp"
	        android:textSize="18sp"
	        android:onClick="onClick"
	        android:background="@drawable/simple_list_item_selector"
	        />
	    <View android:layout_width="match_parent"
	        android:layout_height="1dp"
	        android:background="@color/divider_line_color"/>
    </LinearLayout>
    
</LinearLayout>
